--- a/DPindex.html
+++ b/DPindex.html
@@ -1,88 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Portfolio E.Robinson</title>
-    
-    <link rel="stylesheet" href="./DPstyle.css"/>
-    <h1>{ Portfolio }</h1>
+<html lang="en-us">
 
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="DPstyle.css">
+    <title>DeveloperPortfolio</title>
 </head>
 
-
 <body>
-
-    <header>
-        <h1>Emma Robinson</h1>
-        <p>HTML   & ADVANCED CSS.</p>
-    </header>
-
-
-    <nav>
-        <p>
-            . . .
-        </p>
-        <button>About</button>
-        <button>Contact</button>
-        <button>Projects</button>
-    </nav>
-
-
-    <main>
-    <aside>
-    <!-- <div class="container_row">
-            <div class="layer1">
-                <h2>About. . .</h2>
-                <img class="filler-img" src="C:\Users\Njap\CodeBootCamp\DeveloperPortfolio\images\placeimg_300_200_tech(2).jpg">
-            <p>
-            Currently, I am a coding student looking to gain more skills for a career in web development. 
-            I'm a twenty-something, salon reception manager at Rock Paper Scissors Salon in Durham, N.C.
-            </p>
-            <div class="layer2">
-                <h2>Work. . .</h2>
-            <img class="filler-img" src="C:\Users\Njap\CodeBootCamp\DeveloperPortfolio\images\placeimg_300_200_tech(2).jpg">
-            <p>
-                Currently, I am a coding student looking to gain more skills for a career in web development. 
-                I'm a twenty-something, salon reception manager at Rock Paper Scissors Salon in Durham, N.C.
-            </p>
-        </div class= "container_row"> -->
-    </aside>
-
-    <section1>
-        <h2>About Me.</h2>
-        <div class="selling-points filler-img">
-        <img src="C:\Users\Njap\CodeBootCamp\DeveloperPortfolio\images\placeimg_300_200_tech(2).jpg">
+    <div class="header">
+        <h1>
+            <p>{PORTFOLIO}</p>
+        </h1>
+        <div>
+            <ul>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#projects">Projects</a>
+                </li>
+                <li>
+                    <a href="#about-me">About</a>
+                </li>
+            </ul>
         </div>
+    </div>
+    <div class="hero"></div>
+    <div class="content">
+        <div class="contact-me">
+            <img src="images/placeimg_300_200_tech(1).jpg" class="float-left" />
+            <h2>Get in Contact</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+© 2015 — 2021
+            </p>
+        </div>
+        <div id="my-work" class="my-work">
+            <img src="images/placeimg_640_480_grayscale_tech (1).jpg" class="float-right" />
+            <h2>Projects</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+© 2015 — 2021
+            </p>
+        </div>
+        <div id="about-me" class="about-me">
+            <img src="images/placeimg_640_480_grayscale_tech (3).jpg" class="float-left" />
+            <h2>More About</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+© 2015 — 2021
+            </p>
+        </div>
+    </div>
+    <div class="projects">
+        <div class="project-one">
+            <h3>Project One</h3>
+            <img src="./assets/images/lead-generation.png" />
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+© 2015 — 2021
+            </p>
+        </div>
+        <div class="project-two">
+            <h3>Project Two</h3>
+            <img src="./assets/images/brand-awareness.png" />
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+© 2015 — 2021
+            </p>
+        </div>
+        <div class="project-three">
+            <h3>Project Three</h3>
+            <img src="./assets/images/cost-management.png" />
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+© 2015 — 2021
+            </p>
+        </div>
+    </div>
+    <div class="footer">
+        <h2>Made by ELRob</h2>
         <p>
-            Currently, I am a coding student looking to gain more skills for a career in web development. 
-            I'm a twenty-something, salon reception manager at Rock Paper Scissors Salon in Durham, N.C.
+            
         </p>
-    </section1>
-    <section2>
-        <h2>Contact Me.</h2>
-        <div class="selling-points filler-img">Image</div>
-        <p>
-            (919)867-5309
-            robinsonecu14@gmail.com
-            Hurdle Mills, N.C.
-            <a href= "https://www.linkedin.com/in/emma-robinson-446806212/"> LinkedIn Page</a>
-            <a href= "https://github.com/Elrob92">GitHub Page</a>
-        </p>
-    </section2>
-    <section3>
-        <h2>Projects.</h2>
-        <div class="selling-points filler-img">Image</div>
-        <p>
-            With more experience with HTML and CSS, this will be where I'll showcase the projects that I have completed!
-        </p>
-    </section3>
-    </main>
-
-    <footer>
-    <h3>
-        ELRob
-    </h3>
-    </footer>
+    </div>
 </body>
 </html>
