--- a/DPindex.html
+++ b/DPindex.html
@@ -18,7 +18,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#projects">Projects</a>
+                    <a href="#my-work">Projects</a>
                 </li>
                 <li>
                     <a href="#about-me">About</a>
