--- a/DPindex.html
+++ b/DPindex.html
@@ -32,8 +32,11 @@
             <img src="images/placeimg_300_200_tech(1).jpg" class="float-left" />
             <h2>Get in Contact</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-© 2015 — 2021
+                <ul>
+                    <li>Emma Robinson</li>
+                    <li><a href="https://github.com/Elrob92">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/emma-robinson-446806212/">LinkedIn</a></li>
+                </ul>
             </p>
         </div>
         <div id="my-work" class="my-work">
@@ -48,8 +51,7 @@
             <img src="images/placeimg_640_480_grayscale_tech (3).jpg" class="float-left" />
             <h2>More About</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-© 2015 — 2021
+                I am based in Durham, NC and working towards becoming a Full-Stack Web Developer.  Currently I am enrolled in the UNC Coding Bootcamp.
             </p>
         </div>
     </div>
@@ -58,7 +60,10 @@
             <h3>Project One</h3>
             <img src="./images\placeimg_300_200_tech.jpg" />
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                <ul>
+                    <li><a href="http://davidtunnell.github.io/music-discography-multiple-third-party-apis/">Music Discography Application</a></li>
+                    <li><a href="https://github.com/DavidTunnell/music-discography-multiple-third-party-apis">The repository in Github</a></li>
+                </ul>
             </p>
         </div>
         <div class="project-two">
